<resources>
    <string name="app_name">EncuestaApp</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">archivo_preferencias</string>
    <string name="PREFERENCES_TOKEN">preferencias_token</string>
    <string name="PREFERENCES_USER">preferencias_user</string>
    <string name="PREFERENCES_EXPIRATION">preferencias_expiracion</string>
    <string name="LOGIN_FALSE">Login incorrecto, por favor introduzca bien usuario y clave</string>
    <string name="motivo_casa">Casa</string>
    <string name="motivo_trabajo">Trabajo</string>
    <string name="motivo_estudios">Estudios</string>
    <string name="motivo_sanidad">Sanidad</string>
    <string name="motivo_compras">Compras</string>
    <string name="motivo_ocio">Ocio</string>
    <string name="motivo_otros">Otros</string>
    <string name="LOGIN_TEXT_LOGIN">Login</string>
    <string name="LOGIN_TEXT_USER">Usuario</string>
    <string name="LOGIN_TEXT_PASSWORD">password</string>
    <string name="loading_message">cargando...</string>
    <string name="error_icon_description">Error al cargar los datos</string>
    <string name="error_message">Error al cargar los datos</string>
    <string name="REMAINDERS_NO_REMAINDER">No hay elementos de encuesta, por favor revise la sincronización</string>
    <string name="sync_data">Sincronizar</string>
    <string name="send_data">Enviar datos</string>
    <string name="PREFERENCES_TIME_LAST_SYNC">last sync</string>
    <string name="LastSinc">Ultima sincronización</string>
    <string name="NEVER">Nunca</string>
    <string name="LINEA">LINEA</string>
    <string name="SUBLINEA">SUBLINEA</string>
    <string name="SENTIDO">SENTIDO 1 ida 2 vuelta</string>
    <string name="STOPS_SYNCRHONIZED">Listado de paradas grabado localmente</string>
    <string name="PREFERENCES_BUS_LINE">linea</string>
    <string name="nueva_encuesta">Nueva encuesta</string>
    <string name="LOGOUT">Cerrar Sesion</string>
    <string name="ENCUESTA">Nueva Encuesta</string>
    <string name="MAP">Mapa Posición Autobuses</string>
    <string name="title_activity_maps">Map</string>
    <string name="MAP_Espiras">Estado del tráfico</string>
    <string name="Surveyranking">Ranking</string>
    <string name="Encuestador">ENCUESTADOR</string>
    <string name="Puntos">SCORE</string>
</resources>
