<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"
            android:title="@string/LOGOUT"/>

    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="?android:attr/actionModePasteDrawable"
                android:title="@string/ENCUESTA" />
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/MAP" />
            <item
                android:id="@+id/menu_opcion_3"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/MAP_Espiras" />

        </menu>
    </item>


</menu>
