<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity">
    <!-- Toolbar -->


    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border"

                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">

                <TextView
                    android:id="@+id/tw1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:text="@string/LINEA" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:gravity="center" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/tw2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:text="@string/SUBLINEA" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:gravity="center" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/tw3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:text="@string/SENTIDO" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:gravity="center" />

                <View
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/grey" />

                <Button
                    android:id="@+id/nueva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_rounded"
                    android:padding="5dp"
                    android:text="@string/nueva_encuesta"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_rounded"
                    android:padding="5dp"
                    android:text="@string/sync_data"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/lastSync1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/LastSinc" />

                <TextView
                    android:id="@+id/lastSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="TextView" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:padding="5dp"
                    android:text="@string/send_data"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/loading_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_icon_description"
            android:src="@drawable/gistlogo"
            android:tint="#c3c3c3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/loading_message"
            android:textAlignment="center" />

        <ProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"

        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_icon_description"
            android:src="@drawable/ic_error_black_24px"
            android:tint="#c3c3c3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/error_message"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noplan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center"

        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_icon_description"
            android:src="@drawable/ic_error_black_24px"
            android:tint="#c3c3c3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/REMAINDERS_NO_REMAINDER"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>