<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginBottom="7dp"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="@dimen/letra_grande"
                    tools:textColor="@color/colorPrimary" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"

                    app:srcCompat="@drawable/gistlogo" />
                <View
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="20"
                            app:srcCompat="@mipmap/ic_person_black_24dp" />

                        <EditText
                            android:id="@+id/UsuarioLogin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:ems="10"
                            android:gravity="center_vertical"
                            android:hint="@string/LOGIN_TEXT_USER"
                            android:inputType="textPersonName" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="20"
                            app:srcCompat="@mipmap/ic_vpn_key_black_24dp" />

                        <EditText
                            android:id="@+id/Password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:ems="10"
                            android:gravity="center_vertical"
                            android:hint="@string/LOGIN_TEXT_PASSWORD"
                            android:inputType="textPassword" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="20" />

                        <Button
                            android:id="@+id/LoginButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="90"
                            android:background="@color/colorSecondary"
                            android:padding="15dip"
                            android:text="@string/LOGIN_TEXT_LOGIN"
                            android:textColor="@color/black" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="20" />
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="15dp" />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/LoginFalse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/letra_pequeña"
                    android:textStyle="bold" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/loading_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_icon_description"
            android:src="@drawable/ic_error_black_24px"
            android:tint="#c3c3c3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/error_message"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>


